# ve

./: .env.local.example  .gitignore  README.md  ROADMAP.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/audio/youtube/: route.ts
app/api/clips/[id]/: route.ts
app/api/clips/generate/: route.ts
app/api/convert-heic/: route.ts
app/api/upload/: route.ts
app/api/uploads/[id]/: route.ts
app/create/: page.tsx
app/shots/: page.tsx
components/: BeforeAfterCompare.tsx  FaqAccordion.tsx  FloatingNav.tsx  Particles.tsx  PhonePreview.tsx
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
lib/: jobStore.ts  types.ts
lib/data/: lyrics.ts  outfits.ts  shots.ts
openai-codex-client/: README.md  example.py  example_media.py  generate_image_cli.py  pyproject.toml  requirements.txt
openai-codex-client/openai_codex/: __init__.py  cli.py  client.py  constants.py  media.py  storage.py
tools/: latentsync.py  lipsync.py  setup_latentsync.sh  setup_latentsync_mlx.sh  setup_lipsync.sh  setup_vlm.sh  vlm_describe.py
tools/LatentSync/latentsync/pipelines/: lipsync_pipeline.py
tools/LatentSync/scripts/: inference.py
tools/latentsync_mlx/: __init__.py  inference.py  pipeline.py  scheduler.py  unet.py  vae.py  weights.py  whisper.py
xai-oauth-client/: README.md  cli.py  example.py  example_media.py  pyproject.toml  requirements.txt
xai-oauth-client/xai_oauth/: __init__.py  cli.py  client.py  constants.py  media.py  storage.py
(+2 files in other folders)
