[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xai-oauth-client"
version = "0.1.0"
description = "Standalone xAI OAuth (SuperGrok) client - extracted from Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hermes Agent", email = "contact@hermes-agent.nousresearch.com"}
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
xai-oauth = "xai_oauth.cli:main"

[project.urls]
Homepage = "https://github.com/NousResearch/hermes-agent"
Documentation = "https://docs.hermes-agent.nousresearch.com/xai-oauth"

[tool.hatch.build.targets.wheel]
packages = ["xai_oauth"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100